
@startuml
skinparam classAttributeIconSize 0

class HotelBookingRegistry {
  - List<Reservation> reservationsInOrder
  - Map<String, Reservation> reservationsById
  - Set<Customer> uniqueCustomers
  - Queue<Reservation> processingQueue
  + addReservation(Reservation)
  + findById(String) : Reservation
  + removeReservation(String) : Reservation
  + cancelReservation(String) : boolean
  + pollNextForProcessing() : Reservation
  + findByCustomer(Customer) : List<Reservation>
  + findByRoomType(String) : List<Reservation>
}

class Customer
class VipCustomer
abstract class Room
class StandardRoom
class FamilyRoom
class LuxuryRoom
class Reservation

Customer <|-- VipCustomer
Room <|-- StandardRoom
Room <|-- FamilyRoom
Room <|-- LuxuryRoom
Reservation --> Customer
Reservation --> Room
HotelBookingRegistry o-- Reservation
HotelBookingRegistry o-- Customer
@enduml
